struct: change folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ ui_*.h
 *.jsc
 Makefile*
 *build-*
+build/
 *.qm
 *.prl
 
@@ -52,5 +53,3 @@ compile_commands.json
 *creator.user*
 
 *_qmlcache.qrc
-*build*
-
